--- a/index.html
+++ b/index.html
@@ -151,5 +151,6 @@
     <div class="quantum-orb orb-3"></div>
     <div class="grid-overlay"></div>
     <div id="root" class="h-full w-full relative z-10 text-slate-200"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
