--- a/index.html
+++ b/index.html
@@ -217,6 +217,20 @@
         animation: shimmer 6s infinite;
         pointer-events: none;
       }
+
+      /* --- RECHARTS FOCUS FIX --- */
+      /* Eliminate the white outline box on clicked chart elements */
+      .recharts-surface:focus,
+      .recharts-layer:focus,
+      .recharts-sector:focus,
+      .recharts-pie-sector:focus,
+      .recharts-rectangle:focus,
+      .recharts-wrapper:focus {
+        outline: none !important;
+      }
+      path:focus {
+        outline: none !important;
+      }
     </style>
   <script type="importmap">
 {
@@ -227,6 +241,7 @@
     "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.1/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.32.0",
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@2.45.0",
     "react-dom": "https://esm.sh/react-dom@^19.2.1"
   }
 }
