--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-CN" class="dark">
   <head>
@@ -7,7 +6,7 @@
     <title>Tanxing OS | Quantum ERP</title>
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;700&family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         darkMode: 'class',
@@ -16,6 +15,7 @@
             fontFamily: {
               sans: ['"Inter"', 'sans-serif'],
               mono: ['"JetBrains Mono"', 'monospace'],
+              display: ['"Zhi Mang Xing"', 'cursive'],
             }
           }
         }
@@ -44,7 +44,7 @@
         overflow: hidden;
       }
 
-      /* 1. Obsidian Vision (深邃弥散) - 替代黑背景 */
+      /* 1. Obsidian Vision (深邃弥散) */
       body.theme-ios-glass .ambient-bg {
         background-color: #0f172a;
         background-image: 
@@ -55,17 +55,7 @@
           radial-gradient(at 50% 50%, #020617 0px, transparent 80%);
       }
 
-      /* 2. Titanium Light (精致钛白) */
-      body.theme-titanium-light .ambient-bg {
-        background-color: #f8fafc;
-        background-image: 
-          radial-gradient(at 10% 20%, #eff6ff 0px, transparent 40%),
-          radial-gradient(at 90% 80%, #fff1f2 0px, transparent 40%),
-          radial-gradient(at 50% 50%, #f1f5f9 0px, transparent 60%);
-      }
-      body.theme-titanium-light { color: #1e293b; --glass-bg: rgba(255, 255, 255, 0.6); --glass-border: rgba(0, 0, 0, 0.05); }
-
-      /* 3. Midnight OLED (液态有机发光) */
+      /* 2. Midnight OLED (液态有机发光) */
       body.theme-midnight-dark .ambient-bg {
         background-color: #020617;
         background-image: 
@@ -74,7 +64,7 @@
           radial-gradient(at 50% 50%, #000000 0px, transparent 70%);
       }
 
-      /* 4. Cyber Neon (电激发背景) */
+      /* 3. Cyber Neon (电激发背景) */
       body.theme-cyber-neon .ambient-bg {
         background-color: #020617;
         background-image: 
@@ -102,12 +92,7 @@
         -webkit-backdrop-filter: blur(20px) saturate(140%);
       }
 
-      body.theme-titanium-light .ios-glass-card {
-        background: rgba(255, 255, 255, 0.8);
-        border: 1px solid rgba(0, 0, 0, 0.05);
-      }
-
-      html, body { height: 100%; overflow: hidden; -webkit-font-smoothing: antialiased; }
+      html, body { height: 100%; overflow: hidden; -webkit-font-smoothing: antialiased; background-color: #020617; color: #f8fafc; }
       .custom-scrollbar::-webkit-scrollbar { width: 4px; height: 4px; }
       .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(255,255,255,0.1); border-radius: 10px; }
     </style>
