--- a/index.html
+++ b/index.html
@@ -32,8 +32,7 @@
         --glass-shadow: 0 20px 50px rgba(0, 0, 0, 0.2);
       }
 
-      /* --- 核心背景矩阵算法 (Apple-style Mesh Gradients) --- */
-      
+      /* --- 核心背景矩阵算法 --- */
       .ambient-bg {
         position: fixed;
         top: 0;
@@ -44,7 +43,6 @@
         overflow: hidden;
       }
 
-      /* 1. Obsidian Vision (深邃弥散) */
       body.theme-ios-glass .ambient-bg {
         background-color: #0f172a;
         background-image: 
@@ -55,7 +53,6 @@
           radial-gradient(at 50% 50%, #020617 0px, transparent 80%);
       }
 
-      /* 2. Midnight OLED (液态有机发光) */
       body.theme-midnight-dark .ambient-bg {
         background-color: #020617;
         background-image: 
@@ -64,7 +61,6 @@
           radial-gradient(at 50% 50%, #000000 0px, transparent 70%);
       }
 
-      /* 3. Cyber Neon (电激发背景) */
       body.theme-cyber-neon .ambient-bg {
         background-color: #020617;
         background-image: 
@@ -76,7 +72,6 @@
         background-size: 100%, 100%, 100%, 40px 40px, 40px 40px;
       }
 
-      /* --- 苹果级磨砂面板 --- */
       .ios-glass-panel {
         background: var(--glass-bg);
         border: 1px solid var(--glass-border);
@@ -106,7 +101,9 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "recharts": "https://esm.sh/recharts@^3.6.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.89.0"
+    "firebase/app": "https://esm.sh/firebase@^11.1.0/app",
+    "firebase/firestore": "https://esm.sh/firebase@^11.1.0/firestore",
+    "firebase/": "https://esm.sh/firebase@^12.7.0/"
   }
 }
 </script>
