--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tanxing OS | Quantum ERP</title>
+    <title>Tanxing OS | Supabase Edition</title>
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;700&family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
@@ -23,7 +23,6 @@
       }
     </script>
     <style>
-      /* 全局平滑切换效果 */
       body, .ambient-bg { transition: all 0.8s cubic-bezier(0.4, 0, 0.2, 1); }
       .ios-glass-panel, .ios-glass-card { transition: background 0.3s ease, border 0.3s ease; }
 
@@ -33,15 +32,8 @@
         --glass-shadow: 0 20px 50px rgba(0, 0, 0, 0.2);
       }
 
-      /* --- 核心背景矩阵算法 --- */
       .ambient-bg {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        z-index: -1;
-        overflow: hidden;
+        position: fixed; top: 0; left: 0; width: 100vw; height: 100vh; z-index: -1; overflow: hidden;
       }
 
       body.theme-ios-glass .ambient-bg {
@@ -74,18 +66,14 @@
       }
 
       .ios-glass-panel {
-        background: var(--glass-bg);
-        border: 1px solid var(--glass-border);
-        backdrop-filter: blur(40px) saturate(180%);
-        -webkit-backdrop-filter: blur(40px) saturate(180%);
+        background: var(--glass-bg); border: 1px solid var(--glass-border);
+        backdrop-filter: blur(40px) saturate(180%); -webkit-backdrop-filter: blur(40px) saturate(180%);
         box-shadow: var(--glass-shadow);
       }
 
       .ios-glass-card {
-        background: rgba(255, 255, 255, 0.03);
-        border: 1px solid rgba(255, 255, 255, 0.08);
-        backdrop-filter: blur(20px) saturate(140%);
-        -webkit-backdrop-filter: blur(20px) saturate(140%);
+        background: rgba(255, 255, 255, 0.03); border: 1px solid rgba(255, 255, 255, 0.08);
+        backdrop-filter: blur(20px) saturate(140%); -webkit-backdrop-filter: blur(20px) saturate(140%);
       }
 
       html, body { height: 100%; overflow: hidden; -webkit-font-smoothing: antialiased; background-color: #020617; color: #f8fafc; }
@@ -102,9 +90,7 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "recharts": "https://esm.sh/recharts@^3.6.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "firebase/app": "https://esm.sh/firebase@^11.1.0/app",
-    "firebase/firestore": "https://esm.sh/firebase@^11.1.0/firestore",
-    "firebase/": "https://esm.sh/firebase@^12.7.0/"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.45.1"
   }
 }
 </script>
