feat: Switch database provider to LeanCloud
Replaces Supabase with LeanCloud as the primary backend data storage. This involves updating dependencies, configuration keys, and relevant UI components and context providers. The application will now use `leancloud-storage` for data persistence and synchronization.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tanxing OS | Supabase Edition</title>
+    <title>Tanxing OS | LeanCloud Edition</title>
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500;700&family=Zhi+Mang+Xing&display=swap" rel="stylesheet">
@@ -90,7 +90,7 @@
     "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
     "recharts": "https://esm.sh/recharts@^3.6.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.45.1"
+    "leancloud-storage": "https://esm.sh/leancloud-storage@4.15.0"
   }
 }
 </script>
